# ori-ssh-manager

./: .gitattributes  .gitignore  PLAN-MEJORAS.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
scripts/: globals_a_csv.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  local_pty.rs  sftp.rs  ssh.rs
src/components/: AnchoredMenu.tsx  CommandModal.tsx  CommandPalette.tsx  CommandPanel.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  FileBrowser.tsx  GroupModal.tsx  Logo.tsx  NoteBadge.tsx  SessionInfoModal.tsx  SessionModal.tsx  SettingsModal.tsx  Sidebar.tsx  TabBar.tsx  TerminalView.tsx  TitleBar.tsx  ToastContainer.tsx  index.ts
src/contexts/: ThemeContext.tsx
src/hooks/: localTerminalService.ts  sshService.ts  useDebounce.ts  useSSHConnection.ts  useSftp.ts  useTerminal.ts
src/store/: useStore.ts
src/types/: index.ts
src/utils/: IconView.tsx  colors.ts  fuzzy.test.ts  fuzzy.ts  icons.ts  lastBlock.test.ts  lastBlock.ts  lockdownWebview.ts  sessionImport.test.ts  sessionImport.ts  sessionLog.test.ts  sessionLog.ts
