[package]
name = "ori-sshmanager"
version = "1.0.0"
description = "ORI-SSHManager - Desktop SSH Session Manager"
authors = ["You"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
chrono = "0.4"
dirs = "5"

# SSH dependencies - native cross-platform (no external binaries)
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
ssh2 = "0.9"
aes-gcm = { version = "0.10", features = ["std"] }
base64 = "0.22"
rand_core = "0.6"
