[package]
name = "ori-sshmanager"
version = "1.4.1"
description = "ORI-SSHManager - Desktop SSH Session Manager"
authors = ["You"]
license = "MIT"
repository = "https://github.com/AlexCastu/ori-ssh-manager"
edition = "2021"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
chrono = "0.4"
dirs = "6"

# SSH dependencies - native cross-platform (no external binaries)
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2"
aes-gcm = { version = "0.10", features = ["std"] }
base64 = "0.22"
rand_core = "0.6"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
zeroize = "1"
# SSH puro Rust (sin libssh2/OpenSSL): cross-compila sin toolchain C extra
russh = "0.61.2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "time", "sync"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
